# dutch-digit-parser

./: .gitignore  README.md  pyproject.toml
ddp/: __init__.py  main.py  parser.py
ddp/grammars/: proto_dutch_digit_grammar.lark
tests/: test_dutch_digit_parser.py
