[tool.poetry]
name = "ddp"
version = "0.1.0"
description = ""
authors = ["Nik Vaessen <git@mail.vaessen.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
lark = "^0.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"

[tool.poetry.scripts]
ddp = 'ddp.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
